@@ -8,5 +8,6 @@ AC_CHECK_HEADERS(unistd.h stdlib.h)
 AC_HAVE_FUNCS(stat)
 AC_PROG_AWK
 KRB5_BUILD_LIBOBJS
+KRB5_BUILD_PROGRAM
 KRB5_BUILD_LIBRARY
 V5_AC_OUTPUT_MAKEFILE
